# game-of-life

./: .speed.swp  CMakeLists.txt  game-of-life.cbp
include/: DataTransfer.hpp  GameOfLife.hpp  solution.hpp
src/: DataTransfer.cpp  GameOfLife.cpp  gol_main.cpp  solution.cpp
test/: HelloTest.cpp  standard01.txt  standard04.txt  test.cpp  trace04.txt  trace05.txt
